tests/fixtures/invalid/err011_session_used_after_close.rex
session s with {
  cookies: true
}

s.close()
observe page "https://example.com" with session s as $page
